# NeoStats-stupidserv

./: .gitattributes  AUTHORS  ChangeLog  Makefile.am  Makefile.in  RELNOTES  aclocal.m4  austro.c  b1ff.c  brooklyn.c  brooklyn.l  chef.c  chef.l  cockney.c  common.c  common.h  config.status  configure  configure.in  drawl.c  dubya.c  fudd.c  funetak.c  funetak.l  jethro.c  jethro.l  jive.c  kraut.c  kraut.l  modconfig.h.in  pansy.c  pirate.c  postmodern.c  postmodern.l  pulse.xml  redneck.c  s_help.c  ss.c  ss.h  stamp-h1  (+7 more)
.deps/: b1ff.Po  brooklyn.Po  chef.Po  cockney.Po  common.Po  drawl.Po  fudd.Po  funetak.Po  getopt.Po  getopt1.Po  jethro.Po  jive.Po  kraut.Po  libtalkfilters_la-b1ff.Plo  libtalkfilters_la-brooklyn.Plo  libtalkfilters_la-chef.Plo  libtalkfilters_la-cockney.Plo  libtalkfilters_la-common.Plo  libtalkfilters_la-drawl.Plo  libtalkfilters_la-fudd.Plo  libtalkfilters_la-funetak.Plo  libtalkfilters_la-getopt.Plo  libtalkfilters_la-getopt1.Plo  libtalkfilters_la-jethro.Plo  libtalkfilters_la-jive.Plo  libtalkfilters_la-kraut.Plo  libtalkfilters_la-pansy.Plo  libtalkfilters_la-postmodern.Plo  libtalkfilters_la-redneck.Plo  libtalkfilters_la-talkfilters.Plo  libtalkfilters_la-valspeak.Plo  libtalkfilters_la-warez.Plo  pansy.Po  postmodern.Po  redneck.Po  valspeak.Po  warez.Po  wrap.Po
flex/: austro.l  b1ff.l  brooklyn.l  chef.l  cockney.l  drawl.l  dubya.l  fudd.l  funetak.l  jethro.l  jive.l  kraut.l  pansy.l  pirate.l  postmodern.l  redneck.l  valspeak.l  warez.l
win32/: StupidServ.qsp  buildwin32snap.bat  neostatsversion.rc
