dnl Process this file with autoconf to produce a configure script.
AC_INIT(ss.c)
AC_CONFIG_HEADER(modconfig.h)
PACKAGE=StupidServ
VERSION=1.0
DIRINST=~/NeoStats/
AC_PREFIX_DEFAULT(~/NeoStats/)
CFLAGS="$CFLAGS -O2"

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL 

AC_MSG_CHECKING(Location of NeoStats...)
AC_ARG_WITH(neostats, 
[  --with-neostats=DIR	  Location of NeoStats installation],
[DIRINST=$withval])
AC_MSG_RESULT($DIRINST)


AC_CHECK_FILE($DIRINST/include/dl.h, 
[INCLUDEDIR="$DIRINST/include/"], 
[AC_MSG_ERROR(Can't find existing NeoStats Installation please supply with --with-neostats option)])


dnl check if we are running with Debug....
AC_MSG_CHECKING(Whether to Enable Debuging...)
AC_ARG_ENABLE(debug,
[ --enable-debug - Enable Debuging],
[ case "$enableval" in
  yes)
        CFLAGS="$CFLAGS -Wall -ggdb"
	AC_DEFINE(DEBUG,1)
        AC_MSG_RESULT(yes - Watch your Log Files)
        ;;
  *)
        AC_MSG_RESULT(no)
        ;;
  esac],
AC_MSG_RESULT(no)
)

AC_SUBST(DIRINST)
AC_SUBST(CFLAGS)
AC_OUTPUT(Makefile)
echo "(*----------------------------------------------------------*)"
echo "(| Important Instructions                                   |)"
echo "(*----------------------------------------------------------*)"
echo "(| To compile your module, please type 'make'               |)"
echo "(| If make completes without errors, then you               |)"
echo "(| Must 'make install', but please be sure that NeoStats    |)"
echo "(| Is not currently running with a module of the same name  |)"
echo "(| Running, otherwise Make install will not work            |)"
echo "(| !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! |)"
echo "(| If you are running a BSD, make install may produce a     |)"
echo "(| Error, if that is the case, then please manually copy    |)"
echo "(| opsb.so to the NeoStats/dl directory                     |)"
echo "(| !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! |)"
echo "(*----------------------------------------------------------*)"
echo "(| For Support please visit:                                |)"
echo "(|    IRC:                   /server irc.irc-chat.org       |)"
echo "(|                                   #neostats channel      |)"
echo "(|    WWW:   http://www.neostats.net/boards/                |)"
echo "(*----------------------------------------------------------*)"
echo "(|This Module was written by:                               |)"
echo "(|	fish (fish@dynam.ac)                                |)"
echo "(*----------------------------------------------------------*)"